Updated content-display.scss and criteria.scss to improve layout flexibility and ensure alignment with the design system. Introduced new CSS variables such as --nav-display-gap, --content-actions-flex-direction, and --nav-display-content-gap to standardize spacing and alignment across components. Replaced hardcoded values with these variables to enhance maintainability and responsiveness. Adjusted styles for tabs and content actions to support dynamic layouts with media queries, optimizing the user experience for smaller screens. Additionally, standardized string formatting and replaced inconsistent quotes in attribute selectors for better readability and code consistency.

--- a/src/components/content-display/content-display.scss
+++ b/src/components/content-display/content-display.scss
@@ -1,13 +1,19 @@
 .MagentaA11y__nav-display {
+  --nav-display-gap: 36px;
   --title-font: var(--magentaa11y-typeset-display-md-xtrastrong);
   --external-links-background-img: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpath fill='%23e20074' d='M9 42q-1.2 0-2.1-.9Q6 40.2 6 39V9q0-1.2.9-2.1Q7.8 6 9 6h13.95v3H9v30h30V25.05h3V39q0 1.2-.9 2.1-.9.9-2.1.9Zm10.1-10.95L17 28.9 36.9 9H25.95V6H42v16.05h-3v-10.9Z'/%3E%3C/svg%3E");
   --sub-lists-flex-direction: row;
   --content-details-padding: var(--magentaa11y-spacing-size-24);
   --content-details-header-font: var(--magentaa11y-typeset-body-xxl-strong);
 
+  --tab-width: fit-content;
+
+  --content-actions-flex-direction: row;
+  --nav-display-content-gap: var(--magentaa11y-spacing-size-24);
+
   display: flex;
   flex-direction: column;
-  gap: 36px;
+  gap: var(--nav-display-gap);
   max-width: 1280px;
   margin: auto;
 
@@ -33,22 +39,23 @@
   &__content {
     display: flex;
     flex-direction: column;
-    gap: var(--magentaa11y-spacing-size-24);
+    gap: var(--nav-display-content-gap);
   }
 
   &__content-actions {
     display: flex;
-    flex-direction: row;
-    gap: var(--magentaa11y-spacing-size-16);
+    flex-direction: var(--content-actions-flex-direction);
+    gap: var(--magentaa11y-spacing-size-24);
     justify-content: space-between;
 
     md-tabs {
-      width: fit-content;
+      width: var(--tab-width);
     }
 
     &__buttons {
       display: flex;
-      gap: 24px;
+      gap: var(--magentaa11y-spacing-size-24);
+      justify-content: space-between;
     }
   }
 
@@ -110,13 +117,13 @@
       text-decoration: none;
       font-size: var(--magentaa11y-font-size-16);
 
-      &[target='_blank'] {
+      &[target="_blank"] {
         position: relative;
         display: inline-flex;
         align-items: center;
 
         &::before {
-          content: '';
+          content: "";
           display: inline-block;
           width: var(--magentaa11y-font-size-24);
           height: var(--magentaa11y-font-size-24);
@@ -132,12 +139,17 @@
   }
 
   @media (max-width: 768px) {
+    --nav-display-gap: var(--magentaa11y-spacing-size-24);
     --title-font: var(--magentaa11y-typeset-headline-xxl-xtrastrong);
     --sub-lists-flex-direction: column;
     --content-details-padding: var(--magentaa11y-spacing-size-16);
+    --tab-width: 100%;
+
+    --nav-display-content-gap: var(--magentaa11y-spacing-size-16);
+    --content-actions-flex-direction: column;
   }
 }
 
-[data-theme='dark'] .MagentaA11y__nav-display {
+[data-theme="dark"] .MagentaA11y__nav-display {
   --external-links-background-img: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpath fill='%23f6288f' d='M9 42q-1.2 0-2.1-.9Q6 40.2 6 39V9q0-1.2.9-2.1Q7.8 6 9 6h13.95v3H9v30h30V25.05h3V39q0 1.2-.9 2.1-.9.9-2.1.9Zm10.1-10.95L17 28.9 36.9 9H25.95V6H42v16.05h-3v-10.9Z'/%3E%3C/svg%3E");
 }
